# calendar-booking-service

./: .gitignore  Dockerfile  README.md  docker-compose.yml  pyproject.toml
frontend/: Dockerfile  streamlit_frontend.py  weekly_calendar.html
shared_mount/: weekly_calendar.html
src/: application.py  prometheus_middleware.py
src/booking_agent/chains/: __init__.py  availability_chain.py  booking_agent_chain.py  booking_chain.py  heads_down_chain.py  intent.py  misbehavior.py  response_generator.py  summarize_question.py
src/booking_agent/common/: constants.py
src/booking_agent/exception_handling/: exceptions.py  handler.py
src/booking_agent/llm/: openai_llm.py
src/booking_agent/llm_tracing/: tracer.py
src/booking_agent/logging_utils/: __init__.py  config.py  setup.py
src/booking_agent/prompts/: availability.txt  booking.txt  heads_down.txt  intent.txt  loader.py  misbehavior.txt  persona.txt  response.txt  summarize.txt
src/calendar_booking_logic/: booking_service.py  example_application_logic.py
src/calendar_booking_logic/common/: constants.py  utils.py
src/calendar_booking_logic/data_creation/: calender_generation.py  create_calendar_plot.py  visualize_calendar.py
src/models/: base_models.py  examples.py
src/models/requests/: __init__.py  requests_agent.py  requests_booking.py  requests_tokenize_text.py
src/models/responses/: __init__.py  responses_agent.py  responses_booking.py  responses_tokenize_text.py
src/routes/: __init__.py  agent.py  booking.py  router.py  status.py
src/routes/utils/: streaming.py
(+6 files in other folders)
