[tool.poetry]
name = "REST API Template"
version = "0.1.0"
description = ""
authors = ["Daniel Smith <daniel.smith@wizards.com>"]
readme = "README.md"
package-mode = false


[tool.poetry.dependencies]
python = "3.12.6"
fastapi = "^0.115.4"
structlog = "^24.4.0"
prometheus-client = "^0.21.0"
uvicorn = {extras = ["standard"], version = "^0.32.0"}


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
