[tool.poetry]
name = "REST API Template"
version = "0.1.0"
description = ""
authors = ["Daniel Smith <daniel.smith@oxon.com>"]
readme = "README.md"
package-mode = false


[tool.poetry.dependencies]
python = "3.12.6"
fastapi = "^0.115.4"
structlog = "^24.4.0"
prometheus-client = "^0.21.0"
uvicorn = {extras = ["standard"], version = "^0.32.0"}
ics = "0.7.2"
pytz = "2025.2"
matplotlib = "3.10.3"
langchain-core = "0.3.61"
langchain = "0.3.25"
openai = "1.82.0"
langchain-openai = "0.3.18"
streamlit = "1.45.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
